--- a/apps/upwork/extension/styles/basic.css
+++ b/apps/upwork/extension/styles/basic.css
@@ -101,6 +101,7 @@ button:focus,
 [type="reset"]:not(:disabled),
 [type="middlemit"]:not(:disabled),
 button:not(:disabled),
+button,
 input,
 textarea:focus,
 input:focus,
