--- a/apps/upwork/app/globals.css
+++ b/apps/upwork/app/globals.css
@@ -1,6 +1,11 @@
 @import "tailwindcss";
 @import "toolbox/styles/theme.css";
 
+main {
+  display: flex;
+  min-height: 100%;
+}
+
 body {
   font-family: var(--font-dm-sans);
   background-color: #f9fafb;
@@ -39,11 +44,6 @@ body {
   background-color: #108a0010;
   border-radius: 24px;
   padding: 6px 12px;
-}
-
-main {
-  display: flex;
-  height: 100%;
 }
 
 .card {
